fix: 全面修复 JDK 8 兼容性 + Service 接口/Impl 编译联调
JDK 8 兼容性修复（102 个文件）：
- jakarta.annotation → javax.annotation（全局 85 个文件）
- SpApiClient: record → static class, switch 表达式 → if/else, text block → String 拼接
- SpApiException: sealed class → 普通继承, switch 表达式 → switch/case
- AmazonProperties: record → static class, switch 表达式 → if/else, Map.of() → HashMap
- AmazonMarketplaceEnum: switch 表达式 → switch/case
- SpApiRetryPolicy: Set.of() → Collections.unmodifiableSet
- AmazonCredentialEncryptor: .formatted() → String.format()
- AmazonShopServiceImpl: 嵌套 switch 表达式 → if/else
- OrderSyncServiceImpl/InventorySyncServiceImpl: Set.of() → Collections.unmodifiableSet
- ReviewSyncServiceImpl: Map.of() → HashMap, switch 表达式 → switch/case
- ProfitCalculatorService: record → Lombok @Data class
- 全部模块 var 关键字 → 显式类型声明（65+ 处）
- 全部 .isBlank() → .trim().isEmpty()
- 全部 .toList() → .collect(Collectors.toList())

逻辑修复：
- AdRuleEngineServiceImpl.executeRules() 委托给 AdRuleEngine 完整执行逻辑
- AdRuleEngine 移除未使用的 campaignMapper 注入
- 删除引用 17 个不存在类的孤儿测试文件 AdRuleEngineTest.java