@@ -11,12 +11,13 @@ import com.yudao.module.amazon.common.core.SpApiClient;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
-import jakarta.annotation.Resource;
+import javax.annotation.Resource;
 import java.math.BigDecimal;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.time.format.DateTimeParseException;
 import java.util.*;
+import java.util.stream.Collectors;
 
 /**
  * 订单同步实现。
@@ -49,34 +50,37 @@ public class OrderSyncServiceImpl implements OrderSyncService {
     private static final DateTimeFormatter ISO_DATE_TIME = DateTimeFormatter.ISO_DATE_TIME;
 
     /** NA 区域 Marketplace ID 集合 */
-    private static final Set<String> NA_MARKETPLACES = Set.of(
-            "ATVPDKIKX0DER",   // US
-            "A2EUQ1WTGCTBG2",  // CA
-            "A1AM78C64UM0Y8",  // MX
-            "A2Q3Y263D00KWC"   // BR
-    );
+    private static final Set<String> NA_MARKETPLACES = Collections.unmodifiableSet(
+            new HashSet<>(Arrays.asList(
+                    "ATVPDKIKX0DER",   // US
+                    "A2EUQ1WTGCTBG2",  // CA
+                    "A1AM78C64UM0Y8",  // MX
+                    "A2Q3Y263D00KWC"   // BR
+            )));
 
     /** EU 区域 Marketplace ID 集合 */
-    private static final Set<String> EU_MARKETPLACES = Set.of(
-            "A1F83G8C2ARO7P",  // UK
-            "A1PA6795UKMFR9",  // DE
-            "A13V1IB3VIYZZH",  // FR
-            "APJ6JRA9NG5V4",   // IT
-            "A1RKKUPIHCS9HS",  // ES
-            "A1805IZSGTT6HS",  // NL
-            "A2NODRKZP88ZB9",  // SE
-            "A1C3SOZRARQ6R3",  // PL
-            "AMEN7PMS3EDWL",   // BE
-            "A33AVAJ2PDY3EV"   // TR
-    );
+    private static final Set<String> EU_MARKETPLACES = Collections.unmodifiableSet(
+            new HashSet<>(Arrays.asList(
+                    "A1F83G8C2ARO7P",  // UK
+                    "A1PA6795UKMFR9",  // DE
+                    "A13V1IB3VIYZZH",  // FR
+                    "APJ6JRA9NG5V4",   // IT
+                    "A1RKKUPIHCS9HS",  // ES
+                    "A1805IZSGTT6HS",  // NL
+                    "A2NODRKZP88ZB9",  // SE
+                    "A1C3SOZRARQ6R3",  // PL
+                    "AMEN7PMS3EDWL",   // BE
+                    "A33AVAJ2PDY3EV"   // TR
+            )));
 
     /** FE 区域 Marketplace ID 集合 */
-    private static final Set<String> FE_MARKETPLACES = Set.of(
-            "A1VC38T7YXB528",  // JP
-            "A39IBJ37TR1ESG",  // AU
-            "A21TJRUUN4KGV",   // IN
-            "A19VAU5U5O7RUS"   // SG
-    );
+    private static final Set<String> FE_MARKETPLACES = Collections.unmodifiableSet(
+            new HashSet<>(Arrays.asList(
+                    "A1VC38T7YXB528",  // JP
+                    "A39IBJ37TR1ESG",  // AU
+                    "A21TJRUUN4KGV",   // IN
+                    "A19VAU5U5O7RUS"   // SG
+            )));
 
     @Resource
     private SpApiClient spApiClient;
@@ -314,7 +318,7 @@ public class OrderSyncServiceImpl implements OrderSyncService {
             List<AmazonOrderItemDO> existingItems = orderItemMapper.selectByOrderId(orderId);
             if (!existingItems.isEmpty()) {
                 orderItemMapper.deleteBatchIds(
-                        existingItems.stream().map(AmazonOrderItemDO::getId).toList());
+                        existingItems.stream().map(AmazonOrderItemDO::getId).collect(Collectors.toList()));
             }
         }
 
