@@ -4,9 +4,10 @@ import cn.iocoder.yudao.framework.common.pojo.PageResult;
 import cn.iocoder.yudao.module.amazon.report.controller.admin.vo.WeeklyReportPageReqVO;
 import cn.iocoder.yudao.module.amazon.report.dal.dataobject.AmazonWeeklyReportDO;
 import cn.iocoder.yudao.module.amazon.report.dal.mysql.AmazonWeeklyReportMapper;
-import jakarta.annotation.Resource;
+import javax.annotation.Resource;
 import org.springframework.stereotype.Service;
 
+import java.util.Collections;
 import java.util.List;
 
 @Service
@@ -18,19 +19,19 @@ public class AiWeeklyReportServiceImpl implements AiWeeklyReportService {
     @Override
     public AmazonWeeklyReportDO generateReport(Long shopId, String reportWeek) {
         // 检查是否已存在
-        var existing = reportMapper.selectByWeek(shopId, reportWeek);
+        AmazonWeeklyReportDO existing = reportMapper.selectByWeek(shopId, reportWeek);
         if (existing != null && existing.getStatus() == 1) {
             return existing;
         }
 
-        var report = existing != null ? existing : new AmazonWeeklyReportDO();
+        AmazonWeeklyReportDO report = existing != null ? existing : new AmazonWeeklyReportDO();
         report.setShopId(shopId);
         report.setTenantId(0L);
         report.setReportWeek(reportWeek);
         report.setStatus(0); // 生成中
 
         // TODO: 从各模块聚合数据
-        var data = new AmazonWeeklyReportDO.ReportData();
+        AmazonWeeklyReportDO.ReportData data = new AmazonWeeklyReportDO.ReportData();
         data.setTotalSales(0.0);
         data.setTotalOrders(0);
         data.setAdSpend(0.0);
@@ -43,7 +44,7 @@ public class AiWeeklyReportServiceImpl implements AiWeeklyReportService {
 
         // TODO: 调用 AI 生成摘要和建议
         report.setAiSummary("本周数据汇总，详细分析正在生成中...");
-        report.setAiRecommendations(List.of("待 AI 生成"));
+        report.setAiRecommendations(Collections.singletonList("待 AI 生成"));
         report.setStatus(1);
 
         if (existing != null) {
